cs515-p8/y.output
Terminals unused in grammar

   T_CONSTANT
   T_MOUSE
   T_RIGHTMOUSE
   T_MIDDLEMOUSE
   T_LEFTMOUSE


Grammar

    0 $accept: program $end

    1 program: declaration_list block_list

    2 declaration_list: declaration_list declaration
    3                 | empty

    4 declaration: variable_declaration T_SEMIC
    5            | object_declaration T_SEMIC
    6            | forward_declaration T_SEMIC

    7 variable_declaration: simple_type T_ID optional_initializer
    8                     | simple_type T_ID T_LBRACKET expression T_RBRACKET

    9 simple_type: T_INT
   10            | T_DOUBLE
   11            | T_STRING

   12 optional_initializer: T_ASSIGN expression
   13                     | empty

   14 $@1: /* empty */

   15 object_declaration: object_type T_ID $@1 T_LPAREN parameter_list_or_empty T_RPAREN
   16                   | object_type T_ID T_LBRACKET expression T_RBRACKET

   17 object_type: T_TRIANGLE
   18            | T_PIXMAP
   19            | T_CIRCLE
   20            | T_RECTANGLE
   21            | T_TEXTBOX

   22 parameter_list_or_empty: parameter_list
   23                        | empty

   24 parameter_list: parameter_list T_COMMA parameter
   25               | parameter

   26 parameter: T_ID T_ASSIGN expression

   27 forward_declaration: T_FORWARD T_ANIMATION T_ID T_LPAREN animation_parameter T_RPAREN

   28 block_list: block_list block
   29           | empty

   30 block: initialization_block
   31      | animation_block
   32      | on_block

   33 initialization_block: T_INITIALIZATION statement_block

   34 $@2: /* empty */

   35 $@3: /* empty */

   36 animation_block: T_ANIMATION T_ID $@2 T_LPAREN check_animation_parameter T_RPAREN T_LBRACE $@3 statement_list T_RBRACE end_of_statement_block

   37 animation_parameter: object_type T_ID

   38 check_animation_parameter: T_TRIANGLE T_ID
   39                          | T_PIXMAP T_ID
   40                          | T_CIRCLE T_ID
   41                          | T_RECTANGLE T_ID
   42                          | T_TEXTBOX T_ID

   43 on_block: T_ON keystroke statement_block

   44 keystroke: T_SPACE
   45          | T_LEFTARROW
   46          | T_RIGHTARROW
   47          | T_UPARROW
   48          | T_DOWNARROW
   49          | T_LEFTMOUSE_DOWN
   50          | T_MIDDLEMOUSE_DOWN
   51          | T_RIGHTMOUSE_DOWN
   52          | T_LEFTMOUSE_UP
   53          | T_MIDDLEMOUSE_UP
   54          | T_RIGHTMOUSE_UP
   55          | T_MOUSE_MOVE
   56          | T_MOUSE_DRAG
   57          | T_F1
   58          | T_AKEY
   59          | T_SKEY
   60          | T_DKEY
   61          | T_FKEY
   62          | T_HKEY
   63          | T_JKEY
   64          | T_KKEY
   65          | T_LKEY
   66          | T_WKEY

   67 if_block: statement_block_creator statement end_of_statement_block
   68         | statement_block

   69 statement_block: T_LBRACE statement_block_creator statement_list T_RBRACE end_of_statement_block

   70 statement_block_creator: /* empty */

   71 end_of_statement_block: /* empty */

   72 statement_list: statement_list statement
   73               | empty

   74 statement: if_statement
   75          | for_statement
   76          | assign_statement T_SEMIC
   77          | print_statement T_SEMIC
   78          | exit_statement T_SEMIC

   79 if_statement: T_IF T_LPAREN expression T_RPAREN if_block
   80             | T_IF T_LPAREN expression T_RPAREN if_block T_ELSE if_block

   81 for_statement: T_FOR T_LPAREN statement_block_creator assign_statement end_of_statement_block T_SEMIC expression T_SEMIC statement_block_creator assign_statement end_of_statement_block T_RPAREN statement_block

   82 print_statement: T_PRINT T_LPAREN expression T_RPAREN

   83 exit_statement: T_EXIT T_LPAREN expression T_RPAREN

   84 assign_statement: variable T_ASSIGN expression
   85                 | variable T_PLUS_ASSIGN expression
   86                 | variable T_MINUS_ASSIGN expression

   87 variable: T_ID
   88         | T_ID T_LBRACKET expression T_RBRACKET
   89         | T_ID T_PERIOD T_ID
   90         | T_ID T_LBRACKET expression T_RBRACKET T_PERIOD T_ID

   91 expression: primary_expression
   92           | expression T_OR expression
   93           | expression T_AND expression
   94           | expression T_LESS_EQUAL expression
   95           | expression T_GREATER_EQUAL expression
   96           | expression T_LESS expression
   97           | expression T_GREATER expression
   98           | expression T_EQUAL expression
   99           | expression T_NOT_EQUAL expression
  100           | expression T_PLUS expression
  101           | expression T_MINUS expression
  102           | expression T_ASTERISK expression
  103           | expression T_DIVIDE expression
  104           | expression T_MOD expression
  105           | T_MINUS expression
  106           | T_NOT expression
  107           | math_operator T_LPAREN expression T_RPAREN
  108           | variable geometric_operator variable

  109 primary_expression: T_LPAREN expression T_RPAREN
  110                   | variable
  111                   | T_INT_CONSTANT
  112                   | T_TRUE
  113                   | T_FALSE
  114                   | T_DOUBLE_CONSTANT
  115                   | T_STRING_CONSTANT

  116 geometric_operator: T_TOUCHES
  117                   | T_NEAR

  118 math_operator: T_SIN
  119              | T_COS
  120              | T_TAN
  121              | T_ASIN
  122              | T_ACOS
  123              | T_ATAN
  124              | T_SQRT
  125              | T_ABS
  126              | T_FLOOR
  127              | T_RANDOM

  128 empty: /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
T_FALSE (258) 113
T_TRUE (259) 112
T_INT_CONSTANT (260) 111
T_DOUBLE_CONSTANT (261) 114
T_STRING_CONSTANT (262) 115
T_ID (263) 7 8 15 16 26 27 36 37 38 39 40 41 42 87 88 89 90
T_PRINT (264) 82
T_EXIT (265) 83
T_INT (266) 9
T_DOUBLE (267) 10
T_STRING (268) 11
T_MINUS (269) 101 105
T_PLUS (270) 100
T_DIVIDE (271) 103
T_ASTERISK (272) 102
T_MOD (273) 104
T_AND (274) 93
T_OR (275) 92
T_NOT (276) 106
T_EQUAL (277) 98
T_GREATER (278) 97
T_LESS (279) 96
T_RANDOM (280) 127
T_FLOOR (281) 126
T_ABS (282) 125
T_SQRT (283) 124
T_ATAN (284) 123
T_ACOS (285) 122
T_ASIN (286) 121
T_TAN (287) 120
T_COS (288) 119
T_SIN (289) 118
T_NEAR (290) 117
T_TOUCHES (291) 116
T_CONSTANT (292)
T_ELSE (293) 80
T_IF (294) 79 80
T_LKEY (295) 65
T_KKEY (296) 64
T_JKEY (297) 63
T_HKEY (298) 62
T_FKEY (299) 61
T_DKEY (300) 60
T_SKEY (301) 59
T_AKEY (302) 58
T_WKEY (303) 66
T_SPACE (304) 44
T_MOUSE (305)
T_RIGHTMOUSE (306)
T_MIDDLEMOUSE (307)
T_LEFTMOUSE (308)
T_DOWNARROW (309) 48
T_UPARROW (310) 47
T_RIGHTARROW (311) 46
T_LEFTARROW (312) 45
T_COMMA (313) 24
T_SEMIC (314) 4 5 6 76 77 78 81
T_FORWARD (315) 27
T_INITIALIZATION (316) 33
T_TRIANGLE (317) 17 38
T_PIXMAP (318) 18 39
T_CIRCLE (319) 19 40
T_RECTANGLE (320) 20 41
T_TEXTBOX (321) 21 42
T_ANIMATION (322) 27 36
T_F1 (323) 57
T_FOR (324) 81
T_ON (325) 43
T_LEFTMOUSE_DOWN (326) 49
T_LEFTMOUSE_UP (327) 52
T_MIDDLEMOUSE_DOWN (328) 50
T_MIDDLEMOUSE_UP (329) 53
T_MOUSE_DRAG (330) 56
T_MOUSE_MOVE (331) 55
T_PERIOD (332) 89 90
T_RIGHTMOUSE_DOWN (333) 51
T_RIGHTMOUSE_UP (334) 54
T_LESS_EQUAL (335) 94
T_GREATER_EQUAL (336) 95
T_NOT_EQUAL (337) 99
T_PLUS_ASSIGN (338) 85
T_MINUS_ASSIGN (339) 86
T_ASSIGN (340) 12 26 84
T_RBRACKET (341) 8 16 88 90
T_LBRACKET (342) 8 16 88 90
T_RBRACE (343) 36 69
T_LBRACE (344) 36 69
T_RPAREN (345) 15 27 36 79 80 81 82 83 107 109
T_LPAREN (346) 15 27 36 79 80 81 82 83 107 109
UNARY_OP (347)
T_IF_NO_ELSE (348)


Nonterminals, with rules where they appear

$accept (94)
    on left: 0
program (95)
    on left: 1, on right: 0
declaration_list (96)
    on left: 2 3, on right: 1 2
declaration (97)
    on left: 4 5 6, on right: 2
variable_declaration (98)
    on left: 7 8, on right: 4
simple_type (99)
    on left: 9 10 11, on right: 7 8
optional_initializer (100)
    on left: 12 13, on right: 7
object_declaration (101)
    on left: 15 16, on right: 5
$@1 (102)
    on left: 14, on right: 15
object_type (103)
    on left: 17 18 19 20 21, on right: 15 16 37
parameter_list_or_empty (104)
    on left: 22 23, on right: 15
parameter_list (105)
    on left: 24 25, on right: 22 24
parameter (106)
    on left: 26, on right: 24 25
forward_declaration (107)
    on left: 27, on right: 6
block_list (108)
    on left: 28 29, on right: 1 28
block (109)
    on left: 30 31 32, on right: 28
initialization_block (110)
    on left: 33, on right: 30
animation_block (111)
    on left: 36, on right: 31
$@2 (112)
    on left: 34, on right: 36
$@3 (113)
    on left: 35, on right: 36
animation_parameter (114)
    on left: 37, on right: 27
check_animation_parameter (115)
    on left: 38 39 40 41 42, on right: 36
on_block (116)
    on left: 43, on right: 32
keystroke (117)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64 65 66, on right: 43
if_block (118)
    on left: 67 68, on right: 79 80
statement_block (119)
    on left: 69, on right: 33 43 68 81
statement_block_creator (120)
    on left: 70, on right: 67 69 81
end_of_statement_block (121)
    on left: 71, on right: 36 67 69 81
statement_list (122)
    on left: 72 73, on right: 36 69 72
statement (123)
    on left: 74 75 76 77 78, on right: 67 72
if_statement (124)
    on left: 79 80, on right: 74
for_statement (125)
    on left: 81, on right: 75
print_statement (126)
    on left: 82, on right: 77
exit_statement (127)
    on left: 83, on right: 78
assign_statement (128)
    on left: 84 85 86, on right: 76 81
variable (129)
    on left: 87 88 89 90, on right: 84 85 86 108 110
expression (130)
    on left: 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106
    107 108, on right: 8 12 16 26 79 80 81 82 83 84 85 86 88 90 92
    93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 109
primary_expression (131)
    on left: 109 110 111 112 113 114 115, on right: 91
geometric_operator (132)
    on left: 116 117, on right: 108
math_operator (133)
    on left: 118 119 120 121 122 123 124 125 126 127, on right: 107
empty (134)
    on left: 128, on right: 3 13 23 29 73


state 0

    0 $accept: . program $end

    $default  reduce using rule 128 (empty)

    program           go to state 1
    declaration_list  go to state 2
    empty             go to state 3


state 1

    0 $accept: program . $end

    $end  shift, and go to state 4


state 2

    1 program: declaration_list . block_list
    2 declaration_list: declaration_list . declaration

    T_INT        shift, and go to state 5
    T_DOUBLE     shift, and go to state 6
    T_STRING     shift, and go to state 7
    T_FORWARD    shift, and go to state 8
    T_TRIANGLE   shift, and go to state 9
    T_PIXMAP     shift, and go to state 10
    T_CIRCLE     shift, and go to state 11
    T_RECTANGLE  shift, and go to state 12
    T_TEXTBOX    shift, and go to state 13

    $default  reduce using rule 128 (empty)

    declaration           go to state 14
    variable_declaration  go to state 15
    simple_type           go to state 16
    object_declaration    go to state 17
    object_type           go to state 18
    forward_declaration   go to state 19
    block_list            go to state 20
    empty                 go to state 21


state 3

    3 declaration_list: empty .

    $default  reduce using rule 3 (declaration_list)


state 4

    0 $accept: program $end .

    $default  accept


state 5

    9 simple_type: T_INT .

    $default  reduce using rule 9 (simple_type)


state 6

   10 simple_type: T_DOUBLE .

    $default  reduce using rule 10 (simple_type)


state 7

   11 simple_type: T_STRING .

    $default  reduce using rule 11 (simple_type)


state 8

   27 forward_declaration: T_FORWARD . T_ANIMATION T_ID T_LPAREN animation_parameter T_RPAREN

    T_ANIMATION  shift, and go to state 22


state 9

   17 object_type: T_TRIANGLE .

    $default  reduce using rule 17 (object_type)


state 10

   18 object_type: T_PIXMAP .

    $default  reduce using rule 18 (object_type)


state 11

   19 object_type: T_CIRCLE .

    $default  reduce using rule 19 (object_type)


state 12

   20 object_type: T_RECTANGLE .

    $default  reduce using rule 20 (object_type)


state 13

   21 object_type: T_TEXTBOX .

    $default  reduce using rule 21 (object_type)


state 14

    2 declaration_list: declaration_list declaration .

    $default  reduce using rule 2 (declaration_list)


state 15

    4 declaration: variable_declaration . T_SEMIC

    T_SEMIC  shift, and go to state 23


state 16

    7 variable_declaration: simple_type . T_ID optional_initializer
    8                     | simple_type . T_ID T_LBRACKET expression T_RBRACKET

    T_ID  shift, and go to state 24


state 17

    5 declaration: object_declaration . T_SEMIC

    T_SEMIC  shift, and go to state 25


state 18

   15 object_declaration: object_type . T_ID $@1 T_LPAREN parameter_list_or_empty T_RPAREN
   16                   | object_type . T_ID T_LBRACKET expression T_RBRACKET

    T_ID  shift, and go to state 26


state 19

    6 declaration: forward_declaration . T_SEMIC

    T_SEMIC  shift, and go to state 27


state 20

    1 program: declaration_list block_list .
   28 block_list: block_list . block

    T_INITIALIZATION  shift, and go to state 28
    T_ANIMATION       shift, and go to state 29
    T_ON              shift, and go to state 30

    $default  reduce using rule 1 (program)

    block                 go to state 31
    initialization_block  go to state 32
    animation_block       go to state 33
    on_block              go to state 34


state 21

   29 block_list: empty .

    $default  reduce using rule 29 (block_list)


state 22

   27 forward_declaration: T_FORWARD T_ANIMATION . T_ID T_LPAREN animation_parameter T_RPAREN

    T_ID  shift, and go to state 35


state 23

    4 declaration: variable_declaration T_SEMIC .

    $default  reduce using rule 4 (declaration)


state 24

    7 variable_declaration: simple_type T_ID . optional_initializer
    8                     | simple_type T_ID . T_LBRACKET expression T_RBRACKET

    T_ASSIGN    shift, and go to state 36
    T_LBRACKET  shift, and go to state 37

    $default  reduce using rule 128 (empty)

    optional_initializer  go to state 38
    empty                 go to state 39


state 25

    5 declaration: object_declaration T_SEMIC .

    $default  reduce using rule 5 (declaration)


state 26

   15 object_declaration: object_type T_ID . $@1 T_LPAREN parameter_list_or_empty T_RPAREN
   16                   | object_type T_ID . T_LBRACKET expression T_RBRACKET

    T_LBRACKET  shift, and go to state 40

    $default  reduce using rule 14 ($@1)

    $@1  go to state 41


state 27

    6 declaration: forward_declaration T_SEMIC .

    $default  reduce using rule 6 (declaration)


state 28

   33 initialization_block: T_INITIALIZATION . statement_block

    T_LBRACE  shift, and go to state 42

    statement_block  go to state 43


state 29

   36 animation_block: T_ANIMATION . T_ID $@2 T_LPAREN check_animation_parameter T_RPAREN T_LBRACE $@3 statement_list T_RBRACE end_of_statement_block

    T_ID  shift, and go to state 44


state 30

   43 on_block: T_ON . keystroke statement_block

    T_LKEY              shift, and go to state 45
    T_KKEY              shift, and go to state 46
    T_JKEY              shift, and go to state 47
    T_HKEY              shift, and go to state 48
    T_FKEY              shift, and go to state 49
    T_DKEY              shift, and go to state 50
    T_SKEY              shift, and go to state 51
    T_AKEY              shift, and go to state 52
    T_WKEY              shift, and go to state 53
    T_SPACE             shift, and go to state 54
    T_DOWNARROW         shift, and go to state 55
    T_UPARROW           shift, and go to state 56
    T_RIGHTARROW        shift, and go to state 57
    T_LEFTARROW         shift, and go to state 58
    T_F1                shift, and go to state 59
    T_LEFTMOUSE_DOWN    shift, and go to state 60
    T_LEFTMOUSE_UP      shift, and go to state 61
    T_MIDDLEMOUSE_DOWN  shift, and go to state 62
    T_MIDDLEMOUSE_UP    shift, and go to state 63
    T_MOUSE_DRAG        shift, and go to state 64
    T_MOUSE_MOVE        shift, and go to state 65
    T_RIGHTMOUSE_DOWN   shift, and go to state 66
    T_RIGHTMOUSE_UP     shift, and go to state 67

    keystroke  go to state 68


state 31

   28 block_list: block_list block .

    $default  reduce using rule 28 (block_list)


state 32

   30 block: initialization_block .

    $default  reduce using rule 30 (block)


state 33

   31 block: animation_block .

    $default  reduce using rule 31 (block)


state 34

   32 block: on_block .

    $default  reduce using rule 32 (block)


state 35

   27 forward_declaration: T_FORWARD T_ANIMATION T_ID . T_LPAREN animation_parameter T_RPAREN

    T_LPAREN  shift, and go to state 69


state 36

   12 optional_initializer: T_ASSIGN . expression

    T_FALSE            shift, and go to state 70
    T_TRUE             shift, and go to state 71
    T_INT_CONSTANT     shift, and go to state 72
    T_DOUBLE_CONSTANT  shift, and go to state 73
    T_STRING_CONSTANT  shift, and go to state 74
    T_ID               shift, and go to state 75
    T_MINUS            shift, and go to state 76
    T_NOT              shift, and go to state 77
    T_RANDOM           shift, and go to state 78
    T_FLOOR            shift, and go to state 79
    T_ABS              shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_ATAN             shift, and go to state 82
    T_ACOS             shift, and go to state 83
    T_ASIN             shift, and go to state 84
    T_TAN              shift, and go to state 85
    T_COS              shift, and go to state 86
    T_SIN              shift, and go to state 87
    T_LPAREN           shift, and go to state 88

    variable            go to state 89
    expression          go to state 90
    primary_expression  go to state 91
    math_operator       go to state 92


state 37

    8 variable_declaration: simple_type T_ID T_LBRACKET . expression T_RBRACKET

    T_FALSE            shift, and go to state 70
    T_TRUE             shift, and go to state 71
    T_INT_CONSTANT     shift, and go to state 72
    T_DOUBLE_CONSTANT  shift, and go to state 73
    T_STRING_CONSTANT  shift, and go to state 74
    T_ID               shift, and go to state 75
    T_MINUS            shift, and go to state 76
    T_NOT              shift, and go to state 77
    T_RANDOM           shift, and go to state 78
    T_FLOOR            shift, and go to state 79
    T_ABS              shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_ATAN             shift, and go to state 82
    T_ACOS             shift, and go to state 83
    T_ASIN             shift, and go to state 84
    T_TAN              shift, and go to state 85
    T_COS              shift, and go to state 86
    T_SIN              shift, and go to state 87
    T_LPAREN           shift, and go to state 88

    variable            go to state 89
    expression          go to state 93
    primary_expression  go to state 91
    math_operator       go to state 92


state 38

    7 variable_declaration: simple_type T_ID optional_initializer .

    $default  reduce using rule 7 (variable_declaration)


state 39

   13 optional_initializer: empty .

    $default  reduce using rule 13 (optional_initializer)


state 40

   16 object_declaration: object_type T_ID T_LBRACKET . expression T_RBRACKET

    T_FALSE            shift, and go to state 70
    T_TRUE             shift, and go to state 71
    T_INT_CONSTANT     shift, and go to state 72
    T_DOUBLE_CONSTANT  shift, and go to state 73
    T_STRING_CONSTANT  shift, and go to state 74
    T_ID               shift, and go to state 75
    T_MINUS            shift, and go to state 76
    T_NOT              shift, and go to state 77
    T_RANDOM           shift, and go to state 78
    T_FLOOR            shift, and go to state 79
    T_ABS              shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_ATAN             shift, and go to state 82
    T_ACOS             shift, and go to state 83
    T_ASIN             shift, and go to state 84
    T_TAN              shift, and go to state 85
    T_COS              shift, and go to state 86
    T_SIN              shift, and go to state 87
    T_LPAREN           shift, and go to state 88

    variable            go to state 89
    expression          go to state 94
    primary_expression  go to state 91
    math_operator       go to state 92


state 41

   15 object_declaration: object_type T_ID $@1 . T_LPAREN parameter_list_or_empty T_RPAREN

    T_LPAREN  shift, and go to state 95


state 42

   69 statement_block: T_LBRACE . statement_block_creator statement_list T_RBRACE end_of_statement_block

    $default  reduce using rule 70 (statement_block_creator)

    statement_block_creator  go to state 96


state 43

   33 initialization_block: T_INITIALIZATION statement_block .

    $default  reduce using rule 33 (initialization_block)


state 44

   36 animation_block: T_ANIMATION T_ID . $@2 T_LPAREN check_animation_parameter T_RPAREN T_LBRACE $@3 statement_list T_RBRACE end_of_statement_block

    $default  reduce using rule 34 ($@2)

    $@2  go to state 97


state 45

   65 keystroke: T_LKEY .

    $default  reduce using rule 65 (keystroke)


state 46

   64 keystroke: T_KKEY .

    $default  reduce using rule 64 (keystroke)


state 47

   63 keystroke: T_JKEY .

    $default  reduce using rule 63 (keystroke)


state 48

   62 keystroke: T_HKEY .

    $default  reduce using rule 62 (keystroke)


state 49

   61 keystroke: T_FKEY .

    $default  reduce using rule 61 (keystroke)


state 50

   60 keystroke: T_DKEY .

    $default  reduce using rule 60 (keystroke)


state 51

   59 keystroke: T_SKEY .

    $default  reduce using rule 59 (keystroke)


state 52

   58 keystroke: T_AKEY .

    $default  reduce using rule 58 (keystroke)


state 53

   66 keystroke: T_WKEY .

    $default  reduce using rule 66 (keystroke)


state 54

   44 keystroke: T_SPACE .

    $default  reduce using rule 44 (keystroke)


state 55

   48 keystroke: T_DOWNARROW .

    $default  reduce using rule 48 (keystroke)


state 56

   47 keystroke: T_UPARROW .

    $default  reduce using rule 47 (keystroke)


state 57

   46 keystroke: T_RIGHTARROW .

    $default  reduce using rule 46 (keystroke)


state 58

   45 keystroke: T_LEFTARROW .

    $default  reduce using rule 45 (keystroke)


state 59

   57 keystroke: T_F1 .

    $default  reduce using rule 57 (keystroke)


state 60

   49 keystroke: T_LEFTMOUSE_DOWN .

    $default  reduce using rule 49 (keystroke)


state 61

   52 keystroke: T_LEFTMOUSE_UP .

    $default  reduce using rule 52 (keystroke)


state 62

   50 keystroke: T_MIDDLEMOUSE_DOWN .

    $default  reduce using rule 50 (keystroke)


state 63

   53 keystroke: T_MIDDLEMOUSE_UP .

    $default  reduce using rule 53 (keystroke)


state 64

   56 keystroke: T_MOUSE_DRAG .

    $default  reduce using rule 56 (keystroke)


state 65

   55 keystroke: T_MOUSE_MOVE .

    $default  reduce using rule 55 (keystroke)


state 66

   51 keystroke: T_RIGHTMOUSE_DOWN .

    $default  reduce using rule 51 (keystroke)


state 67

   54 keystroke: T_RIGHTMOUSE_UP .

    $default  reduce using rule 54 (keystroke)


state 68

   43 on_block: T_ON keystroke . statement_block

    T_LBRACE  shift, and go to state 42

    statement_block  go to state 98


state 69

   27 forward_declaration: T_FORWARD T_ANIMATION T_ID T_LPAREN . animation_parameter T_RPAREN

    T_TRIANGLE   shift, and go to state 9
    T_PIXMAP     shift, and go to state 10
    T_CIRCLE     shift, and go to state 11
    T_RECTANGLE  shift, and go to state 12
    T_TEXTBOX    shift, and go to state 13

    object_type          go to state 99
    animation_parameter  go to state 100


state 70

  113 primary_expression: T_FALSE .

    $default  reduce using rule 113 (primary_expression)


state 71

  112 primary_expression: T_TRUE .

    $default  reduce using rule 112 (primary_expression)


state 72

  111 primary_expression: T_INT_CONSTANT .

    $default  reduce using rule 111 (primary_expression)


state 73

  114 primary_expression: T_DOUBLE_CONSTANT .

    $default  reduce using rule 114 (primary_expression)


state 74

  115 primary_expression: T_STRING_CONSTANT .

    $default  reduce using rule 115 (primary_expression)


state 75

   87 variable: T_ID .
   88         | T_ID . T_LBRACKET expression T_RBRACKET
   89         | T_ID . T_PERIOD T_ID
   90         | T_ID . T_LBRACKET expression T_RBRACKET T_PERIOD T_ID

    T_PERIOD    shift, and go to state 101
    T_LBRACKET  shift, and go to state 102

    $default  reduce using rule 87 (variable)


state 76

  105 expression: T_MINUS . expression

    T_FALSE            shift, and go to state 70
    T_TRUE             shift, and go to state 71
    T_INT_CONSTANT     shift, and go to state 72
    T_DOUBLE_CONSTANT  shift, and go to state 73
    T_STRING_CONSTANT  shift, and go to state 74
    T_ID               shift, and go to state 75
    T_MINUS            shift, and go to state 76
    T_NOT              shift, and go to state 77
    T_RANDOM           shift, and go to state 78
    T_FLOOR            shift, and go to state 79
    T_ABS              shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_ATAN             shift, and go to state 82
    T_ACOS             shift, and go to state 83
    T_ASIN             shift, and go to state 84
    T_TAN              shift, and go to state 85
    T_COS              shift, and go to state 86
    T_SIN              shift, and go to state 87
    T_LPAREN           shift, and go to state 88

    variable            go to state 89
    expression          go to state 103
    primary_expression  go to state 91
    math_operator       go to state 92


state 77

  106 expression: T_NOT . expression

    T_FALSE            shift, and go to state 70
    T_TRUE             shift, and go to state 71
    T_INT_CONSTANT     shift, and go to state 72
    T_DOUBLE_CONSTANT  shift, and go to state 73
    T_STRING_CONSTANT  shift, and go to state 74
    T_ID               shift, and go to state 75
    T_MINUS            shift, and go to state 76
    T_NOT              shift, and go to state 77
    T_RANDOM           shift, and go to state 78
    T_FLOOR            shift, and go to state 79
    T_ABS              shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_ATAN             shift, and go to state 82
    T_ACOS             shift, and go to state 83
    T_ASIN             shift, and go to state 84
    T_TAN              shift, and go to state 85
    T_COS              shift, and go to state 86
    T_SIN              shift, and go to state 87
    T_LPAREN           shift, and go to state 88

    variable            go to state 89
    expression          go to state 104
    primary_expression  go to state 91
    math_operator       go to state 92


state 78

  127 math_operator: T_RANDOM .

    $default  reduce using rule 127 (math_operator)


state 79

  126 math_operator: T_FLOOR .

    $default  reduce using rule 126 (math_operator)


state 80

  125 math_operator: T_ABS .

    $default  reduce using rule 125 (math_operator)


state 81

  124 math_operator: T_SQRT .

    $default  reduce using rule 124 (math_operator)


state 82

  123 math_operator: T_ATAN .

    $default  reduce using rule 123 (math_operator)


state 83

  122 math_operator: T_ACOS .

    $default  reduce using rule 122 (math_operator)


state 84

  121 math_operator: T_ASIN .

    $default  reduce using rule 121 (math_operator)


state 85

  120 math_operator: T_TAN .

    $default  reduce using rule 120 (math_operator)


state 86

  119 math_operator: T_COS .

    $default  reduce using rule 119 (math_operator)


state 87

  118 math_operator: T_SIN .

    $default  reduce using rule 118 (math_operator)


state 88

  109 primary_expression: T_LPAREN . expression T_RPAREN

    T_FALSE            shift, and go to state 70
    T_TRUE             shift, and go to state 71
    T_INT_CONSTANT     shift, and go to state 72
    T_DOUBLE_CONSTANT  shift, and go to state 73
    T_STRING_CONSTANT  shift, and go to state 74
    T_ID               shift, and go to state 75
    T_MINUS            shift, and go to state 76
    T_NOT              shift, and go to state 77
    T_RANDOM           shift, and go to state 78
    T_FLOOR            shift, and go to state 79
    T_ABS              shift, and go to state 80
    T_SQRT             shift, and go to state 81
    T_ATAN             shift, and go to state 82
    T_ACOS             shift, and go to state 83
    T_ASIN             shift, and go to state 84
    T_TAN              shift, and go to state 85
    T_COS              shift, and go to state 86
    T_SIN              shift, and go to state 87
    T_LPAREN           shift, and go to state 88

    variable            go to state 89
    expression          go to state 105
    primary_expression  go to state 91
    math_operator       go to state 92


state 89

  108 expression: variable . geometric_operator variable
  110 primary_expression: variable .

    T_NEAR     shift, and go to state 106
    T_TOUCHES  shift, and go to state 107

    $default  reduce using rule 110 (primary_expression)

    geometric_operator  go to state 108


state 90

   12 optional_initializer: T_ASSIGN expression .
   92 expression: expression . T_OR expression
   93           | expression . T_AND expression
   94           | expression . T_LESS_EQUAL expression
   95           | expression . T_GREATER_EQUAL expression
   96           | expression . T_LESS expression
   97           | expression . T_GREATER expression
   98           | expression . T_EQUAL expression
   99           | expression . T_NOT_EQUAL expression
  100           | expression . T_PLUS expression
  101           | expression . T_MINUS expression
  102           | expression . T_ASTERISK expression
  103           | expression . T_DIVIDE expression
  104           | expression . T_MOD expression

    T_MINUS          shift, and go to state 109
    T_PLUS           shift, and go to state 110
    T_DIVIDE         shift, and go to state 111
    T_ASTERISK       shift, and go to state 112
    T_MOD            shift, and go to state 113
    T_AND            shift, and go to state 114
    T_OR             shift, and go to state 115
    T_EQUAL          shift, and go to state 116
    T_GREATER        shift, and go to state 117
    T_LESS           shift, and go to state 118
    T_LESS_EQUAL     shift, and go to state 119
    T_GREATER_EQUAL  shift, and go to state 120
    T_NOT_EQUAL      shift, and go to state 121

    $default  reduce using rule 12 (optional_initializer)


state 91

   91 expression: primary_expression .

    $default  reduce using rule 91 (expression)


state 92

  107 expression: math_operator . T_LPAREN expression T_RPAREN

    T_LPAREN  shift, and go to state 122


state 93

    8 variable_declaration: simple_type T_ID T_LBRACKET expression . T_RBRACKET
   92 expression: expression . T_OR expression
   93           | expression . T_AND expression
   94           | expression . T_LESS_EQUAL expression
   95           | expression . T_GREATER_EQUAL expression
   96           | expression . T_LESS expression
   97           | expression . T_GREATER expression
   98           | expression . T_EQUAL expression
   99           | expression . T_NOT_EQUAL expression
  100           | expression . T_PLUS expression
  101           | expression . T_MINUS expression
  102           | expression . T_ASTERISK expression
  103           | expression . T_DIVIDE expression
  104           | expression . T_MOD expression

    T_MINUS          shift, and go to state 109
    T_PLUS           shift, and go to state 110
    T_DIVIDE         shift, and go to state 111
    T_ASTERISK       shift, and go to state 112
    T_MOD            shift, and go to state 113
    T_AND            shift, and go to state 114
    T_OR             shift, and go to state 115
    T_EQUAL          shift, and go to state 116
    T_GREATER        shift, and go to state 117
    T_LESS           shift, and go to state 118
    T_LESS_EQUAL     shift, and go to state 119
    T_GREATER_EQUAL  shift, and go to state 120
    T_NOT_EQUAL      shift, and go to state 121
    T_RBRACKET       shift, and go to state 123


state 94

   16 object_declaration: object_type T_ID T_LBRACKET expression . T_RBRACKET
   92 expression: expression . T_OR expression
   93           | expression . T_AND expression
   94           | expression . T_LESS_EQUAL expression
   95           | expression . T_GREATER_EQUAL expression
   96           | expression . T_LESS expression
   97           | expression . T_GREATER expression
   98           | expression . T_EQUAL expression
   99           | expression . T_NOT_EQUAL expression
  100           | expression . T_PLUS expression
  101           | expression . T_MINUS expression
  102           | expression . T_ASTERISK expression
  103           | expression . T_DIVIDE expression
  104           | expression . T_MOD expression

    T_MINUS          shift, and go to state 109
    T_PLUS           shift, and go to state 110
    T_DIVIDE         shift, and go to state 111
    T_ASTERISK       shift, and go to state 112
    T_MOD            shift, and go to state 113
    T_AND            shift, and go to state 114
    T_OR             shift, and go to state 115
    T_EQUAL          shift, and go to state 116
    T_GREATER        shift, and go to state 117
    T_LESS           shift, and go to state 118
    T_LESS_EQUAL     shift, and go to state 119
    T_GREATER_EQUAL  shift, and go to state 120
    T_NOT_EQUAL      shift, and go to state 121
    T_RBRACKET       shift, and go to state 124


state 95

   15 object_declaration: object_type T_ID $@1 T_LPAREN . parameter_list_or_empty T_RPAREN

    T_ID  shift, and go to state 125

    $default  reduce using rule 128 (empty)
